src/main/webapp/resources/css/style.css
#content{   
    margin-bottom:100px;
}

#footer{
    bottom: 0px;
    width: 100%;
    height:10px;
    text-align: center;
}

.issueTitle{
    display: inline-block;
    font-size: 150%; 
    width: 100%;
    padding-top: 6px;
}

.loginButton{
    margin-top:8px;
}

.issueLength{
    font-size: 60%;
}

.noBorder{
    border-width: 2px;
}

#addComment{
    text-align: center;
}

.Absolute-Center {
    margin: auto;
    position: absolute;
    top: 0; left: 0; bottom: 50px; right: 0;
    height: 230px;
}

.txt-center{
    text-align: center;
}

#body{
    margin-bottom: 60px;
}

.list-group-item-label-list{
    position: relative;
    display: block;
    padding: 2px 10px;
    margin-bottom: -1px;
    text-align: center;
}

.label-list-scroll {
    overflow: auto;
    height: 203px;
}

.label-title{
    text-align: center;
    font-size:  21px;
}

textarea {
    resize: none;
}

.login-register-form{
    margin-top: 100px;
}

.logo{
    width:100%;
    padding-right: 10px;
}

.logo-header{
    float:left;
    padding-right: 10px;
}

#pageContent{
    position:relative;
}

#search_widget{
    margin: 0px auto;
    width:100%;
    right:0px;
}

#searchBoxStructure {
    width:100%
}

#labelCol {
    width:15%;
}

#inputCol {
    width:60%;
}

td {
    padding-left:20px;
}

#buttonsContainer{
    display:inline-block;
    position:relative;
    float: right;
}

/*augustin*/
.changeStateButton {
    width: 90px;
}

.stateLabelIssues {
    position: relative;
    top: -2px;
}

#labelContainer {
    padding: 10px;
    margin-top:-10px;
}

.cursorPointer {
    cursor: pointer;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.labelCircle {
    border-radius: 7px;
    display: inline-block;
    float: left;
    height: 12px;
    margin-left: 7px;
    margin-right: 7px;
    margin-top: 4px;
    width: 12px;
    text-align: left;
}

.list-item-text{
    display: block;
    margin-bottom: 1px;
    padding: 2px 10px;
    position: relative;
    text-align: left;
    border-radius: 6px;
}

.list-group-item.list-item-text.cursorPointer{
    border-radius: 7px;
}

#issueContent, .commentContent{
    white-space: pre-wrap;
    word-wrap:break-word;
}

#issueContent{
    padding: 15px;
    margin-top:-20px;
}

.modal-content2{
    position: relative;
    border-radius: 5px;
    background-clip: padding-box;
    outline: 0;
}

.stateLabel{
    position:relative;
    top:-2px;
}

.profile-info{
    text-align: center;
}


.profile-panel{
    padding-bottom:20px;
}

/*.issueDateTime{
    float:right;
}*/

.panel > .panel-body + .table, .panel > .panel-body + .table-responsive {
    border-style: hidden;
}

.profile-picture{
    width:100%;
    max-width: 330px;
}

/*.issueDateTime{
    float:right;
}*/

.issueDateTimeUpdate{
    float:right;
}

/*creating labels (Ionut & Augustin)*/
.label-add-new{
    vertical-align: central;
    margin-top: -3px;
    cursor: pointer;
}
.label-add-new:hover{
    vertical-align: central;
    margin-top: -3px;
    cursor: pointer;
} 
#createLabelContainer{
    display: inline-block;
    margin-bottom: 5px; 
    margin-left: -12px;
}
.color-chooser-color{
    border-radius:2px;
    width: 25px;
    height: 25px;
    margin:0.4px;
}
.color-chooser-color:hover{
    width: 24px;
    height: 24px;      
    margin: 0.9px;
}
.label-line{
    width:100%;
    display: flex;
    margin-left: 8px;
    margin-bottom:5px;
}
#createLabelH{
    border-radius: 3px;
    margin-bottom: 5px;
    padding-bottom: 3px;
    padding-top: 3px;       
}
#currentColor{
    margin-bottom: 5px;
}

#createLabelErrorField {
    white-space: pre-wrap; /* css-3 */
    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
    white-space: -pre-wrap; /* Opera 4-6 */
    white-space: -o-pre-wrap; /* Opera 7 */
    word-wrap: break-word; /* Internet Explorer 5.5+ */ 
}
#showCreateLabel {
    padding: 10px;
    position: relative;
    top: -1px;
    width:14px;
}
.h3createanissue{
    font-size: 21px;
}
#buttonCreateIssue{
    margin-top:40px;
}
.breakLongWord{
    word-wrap:break-word;
}
.firstButton.first.disabled > a,.prevButton.first.disabled > a,.nextButton.last.disabled > a,.lastButton.last.disabled > a{
    cursor: default;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.firstButton.first> a,.prevButton.first> a,.nextButton.last> a,.lastButton.last> a {
    cursor:pointer;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

/*View All Issues (ionut)*/

.viewIssueLastUpdated{
    float: right;
}
.theIssue{
    padding-left:10px;
    padding-right:10px;
    /*border-width:3px;
    border-style: solid;*/
}
.theIssueTitle{
    margin-bottom: 5px;
}
.theIssueTitleLink{
    font-size: 150%;
    padding-left: 3px;
}
.theIssueContentPreview{
    padding-top: 5px;
    padding-bottom:6px;
    padding-left: 2px;
    padding: 15px;
}
.theIssueDetails{
    padding-top: 6px;
}
.theIssueShowContent{
    float:right;
    cursor:pointer;
    font-size: 25px;
    margin-top:6px;
}
.theIssueLabel{
    display:inline-flex;
    padding:5px;
    margin-top:3px;
    margin-right:3px;
}
.theIssueRightDetails{
    float: right;
}
.theIssueLeftDetails{
    float: left;
}
.theIssueState{
    font-size: 14px;
}
.commentStateChanged{
    padding-top: 20px;
}
.commentContent{
    margin-top: 3px;
}
.list-item-text{
    margin: 0;
    padding: 2px 10px;
    position: relative;
    text-align: left;
}
.labelInput{
    max-width: 300px;
}
.labelColorManageColors{
    width: 35px;
    height: 35px;
}
.labelColorManageColors:hover{
    width: 33px;
    height: 33px;
}

/*cosmina's autocomplete*/
.tt-dropdown-menu {
    text-align: left;
    width: 300px;
    margin-top: 12px;
    padding: 8px 0;
    background-color: #fff;
    border: 1px solid #ccc;
    border: 1px solid rgba(0, 0, 0, 0.2);
    -webkit-border-radius: 8px;
    -moz-border-radius: 8px;
    border-radius: 8px;
    -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
    -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
    box-shadow: 0 5px 10px rgba(0,0,0,.2);
}

.typeahead, .typeaheadOwners, .typeaheadAssignees {
    width: 300px;
    padding: 8px 12px;
    line-height: 30px;
 /*    border: 2px solid #ccc;
   -webkit-border-radius: 8px;
    -moz-border-radius: 8px;
    border-radius: 8px;*/
    outline: none;
    background-color: #fff;
}

.typeahead:focus {
    border: 2px solid #0097cf;
}

.tt-suggestion{
    padding-left: 3px;
}

.tt-suggestion.tt-cursor {
    color: #fff;
    background-color: #0097cf;
}

/*/issues*/

.labelFilterDetails{
    /*margin-top: 10px;*/
    float:left;
    margin: 5px 0px 0px;
    padding-right: 0px;
}
.labelFilterList{
    margin-bottom: 5px;
    padding: 0px;
}
.labelsFilterList{
    height:150px;
    overflow-y: auto;
}
.issuesList{
    height:350px;
    overflow-y: auto;
}
.firstColButton{
    width:70px;
}
.secondColButton{
    width:70px;

}
.thirdColButton{
    width:70px;

}
.labelListElementFilter{
    padding-top:5px;
    margin-top:-5px;
}

/*/upload.jsp*/
.actionsDiv > input {
    display: none;
}
.attachmentWidth{       
    width: 150px;
}
.buttontext{
    width: 110px;
    overflow: hidden;
    white-space: nowrap;
    font-size:12px;
    display:inline-flex;
    display: -moz-box;
    text-overflow: ellipsis;
    vertical-align: central;
}
.fileDivContent{
    display:inline-block;
    float: left;
}
.actionsDiv{
    margin-left:3px;
}
.allFilesDiv{
    margin-left:3px;
}
.errorsUpload{
    margin-left: 20px;
}
.newProgressBar{
    height:8px;
}
.xButton:hover{
    color:red;
}
.theIssue{
    padding: 10px;
    
}

/*view an issue /edit*/
.labelEditLabels{
        display:inline-block;
        font-size:13px;
    }
    .labelEditLabels > span{
        color:#C42D16;
    }
    .labelEditLabels > span:hover{
        cursor: pointer;
    }
    #existingLabels > .row{
        margin-left: 1px;
    }
    #newLabelInput, #cancelAddNewLabel{
        display:none;
        float:left;
    }
    #addNewLabelToAnIssue{
        float:left;
    }
    #labelsSugestions > span{
        cursor:pointer;
    }
    #editTheIssue{
        display: none;
    }
    #modifiedIssueLabelsList > span > span:hover{
        cursor: pointer;
    }
    .editTheIssueButton{
        float:right;
    }

